src/test/ui/closures/2229_closure_analysis/patterns-capture-analysis.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/patterns-capture-analysis.rs:12:14
   |
LL |     let c =  #[rustc_capture_analysis]
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/patterns-capture-analysis.rs:33:14
   |
LL |     let c =  #[rustc_capture_analysis]
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/patterns-capture-analysis.rs:54:14
   |
LL |     let c =  #[rustc_capture_analysis]
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/patterns-capture-analysis.rs:70:14
   |
LL |     let c =  #[rustc_capture_analysis]
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/patterns-capture-analysis.rs:92:14
   |
LL |     let c =  #[rustc_capture_analysis]
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/patterns-capture-analysis.rs:116:14
   |
LL |     let c =  #[rustc_capture_analysis]
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/patterns-capture-analysis.rs:1:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:16:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Capturing variant[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:19:15
   |
LL |         match variant {
   |               ^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:16:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Min Capture variant[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:19:15
   |
LL |         match variant {
   |               ^^^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:36:5
   |
LL | /     || {
LL | |
LL | |         match variant {
LL | |             _ => {}
LL | |         }
LL | |     };
   | |_____^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:57:5
   |
LL | /     || {
LL | |
LL | |         match variant {
LL | |             SingleVariant::Points(_) => {}
LL | |         }
LL | |     };
   | |_____^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:73:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Capturing variant[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:76:15
   |
LL |         match variant {
   |               ^^^^^^^
note: Capturing variant[(0, 0)] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:76:15
   |
LL |         match variant {
   |               ^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:73:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Min Capture variant[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:76:15
   |
LL |         match variant {
   |               ^^^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:95:5
   |
LL | /     || {
LL | |
LL | |         match array {
LL | |             [_,_,_] => {}
LL | |         }
LL | |     };
   | |_____^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:119:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Capturing variant[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:122:15
   |
LL |         match variant {
   |               ^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:119:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Min Capture variant[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:122:15
   |
LL |         match variant {
   |               ^^^^^^^

error: aborting due to 15 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
